upd: AnalysisService